# vqf

./: .gitignore  LICENSE  README.md  pip_freeze.txt  pyproject.toml  requirements.txt  setup.py
research/2019_05_04_resources_needed/: main.py  preprocessing.py
research/2019_05_04_resources_needed/report/: report.md
research/2019_05_04_resources_needed/results/: case_1_data.csv  case_2_data.csv  case_3_data.csv  no_preprocessing.csv
research/2019_05_04_resources_needed/src/: main.py  preprocessing.py
research/2019_05_08_performance_checks/report/: report.md
research/2019_05_08_performance_checks/results/: results_bfgs.csv
research/2019_05_08_performance_checks/src/: analyze_results.py  main.py
research/2019_05_08_performance_checks/vqf/: main.py  preprocessing.py
research/2019_05_12_visualize_optimization_space/report/: report.md
research/2019_05_12_visualize_optimization_space/src/: analyze_results.py  main.py
research/2019_06_06_interp/report/: report.md
research/2019_06_06_interp/results/: results_interp_bfgs.csv  results_lbfgsb.csv
research/2019_06_06_interp/src/: analyze_results.py  main.py
research/2019_06_06_interp_fourier/results/: angles.txt  results_bfgs.csv  results_interp_lbfgsb.csv  results_interp_nm.csv  results_nm.csv
research/2019_06_06_interp_fourier/src/: analyze_results.py  main.py
research/resources_needed/: main.py
src/: main.py  optimization.py  preprocessing.py  visualization.py  vqf_quantum.py
tests/: preprocessing_test.py
vqf/: main.py  optimization.py  preprocessing.py  visualization.py
(+13 files in other folders)
